--- a/MosquittoChat/MosquittoChat/MosquittoChat.csproj
+++ b/MosquittoChat/MosquittoChat/MosquittoChat.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\MosquittoChatLogoTransparent.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MQTTnet" Version="4.3.1.873" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\MosquittoChatLogoTransparent.png" />
   </ItemGroup>
 
 </Project>
